adjusted nav to recent update, added feather image next to map, fixed doublon counter, and aligned everything on page

--- a/mockups/css/raffle_page.css
+++ b/mockups/css/raffle_page.css
@@ -1,4 +1,9 @@
-
+ul {
+    list-style-type: none;
+}
+footer {
+    background-color: #ec268f;
+}
 .title {
     color:var(--primary-font);
     text-align: left;
@@ -26,14 +31,26 @@
     column-gap:5px;
 }
 
-
+.main-flex {
+    display: flex;
+}
 .main-page {
     background-image: url('./../assets/back-map.png');
-    background-size:cover;
+    background-size:contain;
     background-repeat: no-repeat;
-    height:88vh;
-    width:71vw;
+    background-position: center;
+    margin-top:2%;
+    margin-left:auto;
+    margin-right: auto;
 }
+
+.feather {
+    width:200px;
+    height: 400px;
+    margin-top:4%;  
+    margin-left:50px;
+}
+
 
 .doublon-counter {
     border:none;
@@ -45,6 +62,10 @@
     font-size: 4em;
 }
 
+.container {
+    display: flex;
+    justify-content: flex-start;
+}
 .prizes {
     width:45%;
     height:45%;
@@ -56,30 +77,27 @@
     display:grid;
     grid-template-rows: repeat(2,50%);
     grid-template-columns: repeat(4,20%);
-    margin-left:275px;
+    margin-left:10vw;
+    margin-top:2%;
 }
 
-.main-page {
-    margin-top:2%;
-    padding-top:8%;
-    margin-left:auto;
-    margin-right: auto;
-}
 
 .head {
     display: flex;
-    height: 15%;
+    height: 20%;
+    margin-top:8%;
 }
 
 .head > img {
     width:20vw;
-    height:20vh;
-    margin-left:10vw;
+    height:auto;
+    margin-left:20%;
 }
 
 .total-counter {
     padding-top:3%;
-    margin-left:15vw;
+    margin-left:10%;
+    font-size: 1.5em;
 }
 
 .counter {
@@ -87,11 +105,11 @@
     justify-content: start;
     align-items: center;
     width:33.33%;
-    margin-left: 12vw;
+    margin-left: 10vw;
 }
 
 .time {
-    margin-left:38vw;
+    margin-left:8vw;
 
 }
 
@@ -99,3 +117,9 @@
     background-color: #ec268f;
 
 }
+
+.bottom-section {
+    display: flex;
+}
+
+
